--- a/rm-app/src/components/banner/banner.css
+++ b/rm-app/src/components/banner/banner.css
@@ -1,17 +1,15 @@
 .banner {
     position: relative;
     width: 100%;
-    height: 10rem;
-    background-image: url('../../assets/bannerBackground.png');
+    height: 8rem;
+    background-image: url('../../assets/1.jpg');
     background-size: cover;
-
 }
 
 .banner__logo {
     position: absolute;
-    top: 2%;
+    top: 10%;
     left: 2%;
-    width: 14rem;
-    /* Tamaño ajustable del logotipo */
+    width: 7rem;
     height: auto;
 }
