--- a/rm-app/src/components/layout/layout.css
+++ b/rm-app/src/components/layout/layout.css
@@ -1,3 +1,19 @@
+.banner {
+    position: relative;
+    width: 100%;
+    height: 8rem;
+    background-image: url('../../assets/1.jpg');
+    background-size: cover;
+}
+
+.banner__logo {
+    position: absolute;
+    top: 10%;
+    left: 2%;
+    width: 7rem;
+    height: auto;
+}
+
 .footer {
     position: absolute;
     width: 100%;
