--- a/rm-app/src/components/navbar/navbar.css
+++ b/rm-app/src/components/navbar/navbar.css
@@ -1,10 +1,6 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 10px 20px;
     background-color: #f4f4f4;
-
 }
 
 .navbar__list {
@@ -18,9 +14,7 @@
 .navbar__item {
     margin-right: 20px;
     cursor: pointer;
-    font-size: 16px;
-    text-decoration: none;
-    color: #333;
+    visibility: visible;
 }
 
 .navbar__link {
@@ -46,7 +40,7 @@
 
 @media (max-width: 1000px) {
     .navbar__item {
-        display: none;
+        visibility: collapse;
     }
 
     .navbar__separador {
@@ -56,16 +50,4 @@
     .navbar__burger {
         display: block;
     }
-}
-
-.navbar__list--expanded {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-
-    left: 20px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 10px;
 }
