--- a/rm-app/src/components/likeBotton/likeButton.css
+++ b/rm-app/src/components/likeBotton/likeButton.css
@@ -1,9 +1,9 @@
 .likeButton {
-    background-color: blue;
+    background-color: rgb(69, 97, 221);
     border: none;
     border-radius: 50%;
-    width: 45px;
-    height: 45px;
+    width: 35px;
+    height: 35px;
     cursor: pointer;
     transition: transform 0.2s ease-in-out;
 }
@@ -13,9 +13,10 @@
 }
 
 .likeButton__heart {
-    width: 43px;
-    height: 43px;
+    width: 33px;
+    height: 33px;
     fill: white;
+    margin-left: -2px;
 }
 
 .likeButton__heart--liked {
