--- a/rm-app/src/components/popupImgInfo/popupImgInfo.css
+++ b/rm-app/src/components/popupImgInfo/popupImgInfo.css
@@ -5,11 +5,11 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
-
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 2;
+
 
 }
 
@@ -17,6 +17,62 @@
     background: white;
     padding: 20px;
     border-radius: 8px;
-    width: 80%;
     max-width: 500px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    @media (max-width: 1000px) {
+        max-width: 300px;
+        height: 540px;
+    }
+}
+
+.popupImgInfo__close {
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    border: none;
+    border-radius: 50%;
+    background-color: black;
+    color: white;
+    font-size: 1.5em;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
+}
+
+.popupImgInfo__close:hover {
+    transform: scale(1.1);
+}
+
+.popupImgInfo__image {
+    border-radius: 10px;
+    max-width: 300px;
+
+    @media (max-width: 1000px) {
+        max-width: 300px;
+        max-height: 310px;
+    }
+
+}
+
+.popupImgInfo__details {
+    font-size: 0.8em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.popupImgInfo__actions {
+    display: flex;
+    justify-content: space-between;
+
+    @media (max-width: 1000px) {
+        position: absolute;
+        bottom: 1%;
+        gap: 240px;
+
+    }
 }
