--- a/rm-app/src/components/search/search.css
+++ b/rm-app/src/components/search/search.css
@@ -6,6 +6,14 @@
     border-radius: 10px;
     margin-left: 5px;
     margin-right: 5px;
+
+    @media (max-width: 653px) {
+        width: 184px;
+    }
+
+    @media (max-width: 425px) {
+        width: 134px;
+    }
 }
 
 .search__button {
