--- a/rm-app/src/pages/home/home.css
+++ b/rm-app/src/pages/home/home.css
@@ -6,10 +6,21 @@
     margin-bottom: 20px;
     margin-left: 20px;
     margin-right: 20px;
+
+    @media (max-width: 653px) {
+        gap: 10px;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
 }
 
 .controls__orderBy {
     width: 200px;
+
+    @media (max-width: 653px) {
+        width: 110px;
+    }
+
 }
 
 .css-sc8y68-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root {
@@ -24,11 +35,37 @@
 .image-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    justify-content: center;
+
+    @media (max-width: 585px) {
+        margin-left: 120px
+    }
+
+    @media (max-width: 480px) {
+        margin-left: 80px
+    }
+
+    @media (max-width: 420px) {
+        margin-left: 30px
+    }
 }
 
-@media (max-width: 768px) {
-    .image-list {
-        grid-template-columns: 1fr;
-        align-items: center;
-    }
+
+.pagination button {
+    padding: 8px 16px;
+    font-size: 16px;
+    color: #fff;
+    background-color: rgb(69, 97, 221);
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-right: 20px;
+}
+
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
 }
